<resources>
    <string name="app_name">欣和车检</string>
    <string name="btn_update">更新姓名</string>
    <string name="btn_delete">删除此检验员</string>

    <!-- Strings for page_login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_useremail">登陆邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_confirm">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_up">添加新用户</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">密码长度过短</string>
    <string name="error_incorrect_user">用户不存在</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此处必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings for drawer -->
    <string name="settings">设置</string>

    <!-- Strings for page_inspection page -->
    <string name="full_inspection">全检</string>
    <string name="clear">清除</string>
    <string name="search">查找</string>
    <string name="report">报告</string>
    <string name="inspect">车辆检测</string>
    <string name="sign_out">退出</string>
    <string name="inspection_no">检测编号</string>
    <string name="prompt_plate_prefix">请输入车牌前缀</string>
    <string name="plate_number">车牌号码</string>
    <string name="prompt_plate_number">请输入车牌号码</string>
    <string name="make_model">厂牌型号</string>
    <string name="transportation_number">运输证号</string>
    <string name="vin">车架号码</string>
    <string name="plate_type">号牌种类</string>
    <string name="prompt_plate_type">请输入号牌种类</string>
    <string name="organization">车辆单位</string>
    <string name="owner">车主</string>
    <string name="engine_no">发动机号</string>
    <string name="vehicle_type">车辆类型</string>
    <string name="seats_number">载质量（座位）</string>
    <string name="register_date">登记日期</string>
    <string name="state">车辆状况</string>
    <string name="headlight_type">前照灯制</string>
    <string name="base_weight">基准质量（kg）</string>
    <string name="whole_weight">总质量（kg）</string>
    <string name="fuel_type">燃油类型</string>
    <string name="brake_system_type">气/液压制动</string>
    <string name="drive_wheel">驱动形式</string>
    <string name="emission_inspector">废气检验员</string>
    <string name="exterior_inspector">外检员</string>
    <string name="commander">引车员</string>
    <string name="shaft1">一轴</string>
    <string name="shaft2">二轴</string>
    <string name="shaft3">三轴</string>
    <string name="shaft4">四轴</string>
    <string name="manual_brake">手制动</string>
    <string name="sound_level">声级</string>
    <string name="emission">尾气</string>
    <string name="headlight">前照灯</string>
    <string name="plate_prefix">车牌号码前缀</string>
    <string name="inspection_organization">检测单位</string>
    <string name="select_hardware">选择已有设备</string>
    <string name="select_braker">选择制动设备</string>
    <string name="brake_tester">制动检验台</string>
    <string name="rolling">滚筒式</string>
    <string name="loading">加载式</string>
    <string name="two_platform">两板式</string>
    <string name="four_platform">四板式</string>
    <string name="tester">检验台</string>
    <string name="suspension">悬挂</string>
    <string name="side_slip">侧滑</string>
    <string name="speed">车速</string>
    <string name="sound_level_meter">声级计</string>
    <string name="exterior_chassis">外观底盘</string>
    <string name="headlights_tester">前照灯检测仪</string>
    <string name="emission_analyzer">废气分析仪</string>
    <string name="smoke_level_meter">烟度计</string>
    <string name="add">加入</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="how_to_print">打印报告方式</string>
    <string name="browse_to_print">浏览打印</string>
    <string name="send_to_printer">直接打印</string>
    <string name="please_select">请选择</string>
    <string name="invalid_input">格式不正确</string>

    <!-- Strings for settings_nav page -->
    <string name="entry_settings">录入设置</string>
    <string name="calibration_brake_settings">标定制动</string>
    <string name="calibration_sideslip_settings">标定侧滑</string>
    <string name="module_settings">模块设置</string>
    <string name="moduletest_settings">模块测试</string>

    <!-- Strings for settings_entry page -->
    <string name="print_setting">打印报告方式</string>
    <string name="inspection_organization_setting">检测单位</string>
    <string name="add_new_member">添加新成员</string>
    <string name="update_member">更新成员信息</string>
    <string name="op_name">姓名</string>
    <string name="make_model_setting">厂牌型号</string>
    <string name="plate_prefix_setting">车牌号码前缀</string>
    <string name="emission_inspector_setting">废气检验员</string>
    <string name="exterior_inspector_setting">外检员</string>
    <string name="commander_setting">引车员</string>

    <!-- Strings for equipment management page -->
    <string name="suspension_station">悬挂检测台</string>
    <string name="side_station">侧滑检测台</string>
    <string name="speed_station">车速检测台</string>
    <!--<string name="sound_level_meter">声级计</string>-->
    <!--<string name="exterior_chassis">外观底盘</string>-->
    <!--<string name="headlights_tester">前照灯检测仪</string>-->
    <!--<string name="emission_analyzer">废气分析仪</string>-->
    <!--<string name="smoke_level_meter">烟度计</string>-->

    <!-- Strings for 标定制动设置 和 标定侧滑设置 page -->
    <string name="calib_method">选择标定方式</string>
    <string name="calib_items">选择标定项目</string>
    <string name="calib_method_one">一点标定</string>
    <string name="calib_method_two">三点标定</string>
    <string name="calib_items_ulw">前左轮重</string>
    <string name="calib_items_urw">前右轮重</string>
    <string name="calib_items_ulb">前左制动</string>
    <string name="calib_items_urb">前右制动</string>
    <string name="calib_items_dlw">后左轮重</string>
    <string name="calib_items_drw">后右轮重</string>
    <string name="calib_items_dlb">后左制动</string>
    <string name="calib_items_drb">后右制动</string>
    <string name="calib_value">砝码标称值</string>
    <string name="voltage_value_zero">零点电压</string>
    <string name="display_value">显示值</string>
    <string name="voltage_value">电压</string>
    <string name="show_table">参考值</string>

    <!-- Strings for 模块设置 page -->
    <string name="car_set">车辆到位方式</string>
    <string name="plateform">平板台类型</string>
    <string name="wheel_weight_ratio">轮重分辨率</string>
    <string name="brake_ratio">制动分辨率</string>
    <string name="tel_type">通讯波特率</string>
    <string name="weight_limit">总量判定限值</string>

    <!-- Other Strings -->
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
</resources>

