<?xml version="1.0" encoding="utf-8"?>

<!--Replaced by listPreference, this file should be deleted after test-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/select_braker"
        android:key="braker_settings">
        <CheckBoxPreference
            android:key="hardware1"
            android:title="@string/rolling"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="hardware2"
            android:title="@string/loading"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="hardware3"
            android:title="@string/two_platform"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="hardware4"
            android:title="@string/four_platform"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>