<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/entry_settings" />

    <!--标定制动目录-->
    <header
        android:icon="@mipmap/ic_launcher"
        android:title="@string/calibration_brake_settings" />

    <!--标定侧滑目录-->
    <header
        android:icon="@mipmap/ic_launcher"
        android:title="@string/calibration_sideslip_settings" />

    <!--模块设置目录-->
    <header
        android:icon="@mipmap/ic_launcher"
        android:title="@string/module_settings" />

    <!--模块测试目录-->
    <header
        android:icon="@mipmap/ic_launcher"
        android:title="@string/moduletest_settings" />

    <header
        android:icon="@mipmap/ic_launcher"
        android:summary="view baidu website"
        android:title="baidu">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://m.baidu.com/" />
    </header>

</preference-headers>