<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/entry_settings">

        <!-- 废气检验员 -->
        <PreferenceScreen
            android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment$EmissionInspectorFragmentInner"
            android:title="@string/emission_inspector"
            android:summary="@string/management">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- 外检员 -->
        <PreferenceScreen
            android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment$ExteriorInspectorFragmentInner"
            android:title="@string/exterior_inspector"
            android:summary="@string/management">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- 引车员 -->
        <PreferenceScreen
            android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment$CommandInspectorFragmentInner"
            android:title="@string/commander"
            android:summary="@string/management">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- 车牌号码前缀 -->
        <PreferenceScreen
            android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment$PlatePrefixFragmentInner"
            android:title="@string/plate_prefix"
            android:summary="@string/management">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- 厂牌型号 -->
        <PreferenceScreen
            android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment$MakeModelFragmentInner"
            android:title="@string/make_model"
            android:summary="@string/management">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- 检测单位 -->
        <PreferenceScreen
            android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment$OrgFragmentInner"
            android:title="@string/inspection_organization"
            android:summary="@string/management">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- 设备选择 -->
        <PreferenceScreen
            android:fragment="com.example.qinlu.autotesting.EntrySettingsFragment$EquipmentFragmentInner"
            android:title="@string/select_hardware"
            android:summary="@string/management">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- 制动监测台 -->
        <ListPreference
            android:key="BRAKER_LIST"
            android:title="@string/select_braker"
            android:summary="@string/management"
            android:entries="@array/brakerListArray"
            android:entryValues="@array/brakerListValue" />

        <!-- 打印方式选择 -->
        <ListPreference
            android:key="PRINT_LIST"
            android:title="@string/how_to_print"
            android:summary="@string/management"
            android:entries="@array/printListArray"
            android:entryValues="@array/printListValue" />

        <!-- This PreferenceScreen tag sends the user to a completely different
             activity, switching out of the current preferences UI. -->
        <PreferenceScreen
            android:title="test"
            android:summary="test">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>