<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_form"
        android:background="@drawable/transparentimage">

        <LinearLayout
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <!-- Email Label -->
            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_useremail"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16dp"
                android:drawableRight="@drawable/ic_loginuser"
                android:layout_marginRight="35dp"
                android:singleLine="true"/>


            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />

            <!-- Password Label -->
            <EditText
                android:id="@+id/password"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:textColorHint="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                android:textColor="#ADCCE2"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:drawableRight="@drawable/ic_loginpwd"
                android:layout_marginRight="35dp"
                android:maxLines="1"
                android:singleLine="true" />
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ADCCE2"/>


            <TextView
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:text="@string/action_sign_in"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="16dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="32dp"
                />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
