<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:theme="@style/InspectionTabTheme">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="52.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="11dp"
            android:paddingBottom="11dp">

            <!--******废气检验员*******-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/emission_inspector_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emission_inspector"
                    android:layout_marginLeft="20dp"/>

                <LinearLayout
                    android:layout_weight="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/emission_inspector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:maxLines="1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8" />

                </LinearLayout>
            </LinearLayout>

            <!--*******外检员*******-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/exterior_inspector_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exterior_inspector"
                    android:layout_marginLeft="20dp"/>

                <LinearLayout
                    android:layout_weight="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText

                        android:id="@+id/exterior_inspector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:maxLines="1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8" />

                </LinearLayout>
            </LinearLayout>

            <!--******引车员*******-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/commander_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/commander"
                    android:layout_marginLeft="20dp"/>

                <LinearLayout
                    android:layout_weight="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/commander"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:maxLines="1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dad8d8" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>